--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,6 +13,7 @@ source:
     - 22.patch
     # Ensure that .dll gets installed in <CMAKE_INSTALL_PREFIX>/bin
     - install_library_in_default_location.patch
+    - disable_setting_custom_flags_in_arm_and_ppc.patch
 
 build:
   number: 0
